[package]
name = "example_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fender = { git = "https://github.com/FenderLang/Fender", rev = "c268abae87f48c229de23b991d594e33e6d98b85", default-features = false }
